[#157872945] Fixing navbar layout on mobile and gifts bundle spacing.

--- a/frontend-gifts/src/styles/sass/_navbar.scss
+++ b/frontend-gifts/src/styles/sass/_navbar.scss
@@ -564,7 +564,7 @@
   }
 }
 @media #{$tablet-port} {
-  .navbar { padding-left: 15px; }
+  .navbar { padding-left: 0; }
   .toolbar { right: 20px; }
 }
 
